--- a/app/assets/styles/modules/_side-nav.css
+++ b/app/assets/styles/modules/_side-nav.css
@@ -92,6 +92,7 @@
     flex-direction: column;
     width: 100%;
     padding-left: 0;
+    visibility: hidden;
   }
 
   &__menu-item {
@@ -113,6 +114,14 @@
 
   &--black {
     background-color: $portfolioBlack;
+  }
+
+  &__image {
+    display: none;
+    max-width: 10rem;
+    max-height: 10rem;
+    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
   }
 
   @mixin atLarge {
@@ -143,10 +152,6 @@
 
     &__image {
       display: block;
-      max-width: 10rem;
-      max-height: 10rem;
-      border: 0.5rem solid rgba(255, 255, 255, 0.2);
-      border-radius: 50%;
     }
 
     &__menu-content {
@@ -154,6 +159,10 @@
       flex: 1;
       width: 100%;
       margin-bottom: auto;
+    }
+
+    &__menu {
+      visibility: visible !important;
     }
   }
 }
