--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -2,3 +2,5 @@ $portfolioWhite: #fff;
 $portfolioBlack: #000;
 $socialColor: #495057;
 $separatorColor: #dee2e6;
+$titleColor: #343a40;
+$subtitleColor: #868e96;
