--- a/app/assets/styles/modules/_portfolio-section.css
+++ b/app/assets/styles/modules/_portfolio-section.css
@@ -1,7 +1,6 @@
-.resume-section {
+.portfolio-section {
   border-bottom: 1px solid $separatorColor;
-  height: 100vh;
-  box-sizing: border-box;
+  min-height: 100vh;
   padding-top: 5rem;
   padding-bottom: 15rem;
   display: flex;
