--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,9 +1,13 @@
 @import "normalize.css";
-@import "base/_global";
 @import "base/_variables";
+@import "base/_global";
 @import "base/_mixins";
 @import "modules/_side-nav";
-@import "modules/_resume-wrapper";
-@import "modules/_resume-section";
+@import "modules/_portfolio-wrapper";
+@import "modules/_portfolio-section";
 @import "modules/_about-me-section";
 @import "modules/_socials";
+@import "modules/_section-title";
+@import "modules/_portfolio-item";
+@import "modules/_subheading";
+@import "modules/_portfolio-date";
