Adding Skills section

--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -1,3 +1,9 @@
+@define-mixin atMedium {
+  @media (min-width: 765px) {
+    @mixin-content;
+  }
+}
+
 @define-mixin atLarge {
   @media (min-width: 992px) {
     @mixin-content;
