--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -18,8 +18,21 @@ body {
   margin-bottom: 1rem;
 }
 
-.mb-5 {
+.mb-3 {
   margin-bottom: 3rem;
+}
+
+.pt-5 {
+  padding-top: 5rem !important;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.vertical-centered {
+  display: flex;
+  align-items: center;
 }
 
 h1,
